--- a/app/src/main/res/layout/item_character.xml
+++ b/app/src/main/res/layout/item_character.xml
@@ -56,7 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="marquee"
-            android:maxLines="1"
+            android:singleLine="true"
             android:transitionName="mediaTitle" />
 
         <TextView
@@ -66,7 +66,6 @@
             android:alpha="0.58"
             android:ellipsize="marquee"
             android:includeFontPadding="false"
-            android:maxLines="1"
             android:singleLine="true"
             android:textAlignment="textEnd"
             android:textAllCaps="true"
